# python-0g

./: .env.example  .gitignore  MANIFEST.in  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: publish.yml
a0g/: base.py
a0g/common/: utils.py
a0g/contract/: __init__.py
a0g/jsbindings/: package.json  pnpm-lock.yaml
a0g/jsbindings/src/: index.ts
a0g/jsbindings/src/storage/: cache-keys.ts  index.ts  metadata.ts
a0g/jsbindings/src/utils/: error-handler.ts  nonce.ts
a0g/types/: account.py  headers.py  ledger.py  model.py  settle_signer_key.py
tests/: test_a0g.py  test_jsbindings.py
