[project]
name = "python-0g"
version = "0.1.0"
description = ""
authors = [
    {name = "George Kasparyants",email = "gg_plastt@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "web3 (>=7.13.0,<8.0.0)",
    "openai (>=1.109.1,<2.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "py-mini-racer (>=0.6.0,<0.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"
pyclean = "^3.1.0"
isort = "^6.0.1"
mypy = "^1.18.2"

